tests/paczka1/small_fuzzy/58821478.err
Error in line 4: eAsMbQOqJ2q S548 69,3
Error in line 6: rcUTo4C S804 59,5
